Fix AutoComplete empty-state overflow on mobile using inline feedback

--- a/frontend/src/components/addOrder/add-order.scss
+++ b/frontend/src/components/addOrder/add-order.scss
@@ -116,10 +116,6 @@
   margin-left: 2px;
 }
 
-.site-name-column {
-  margin-bottom: 2rem;
-}
-
 .cds--accordion__heading {
   background-color: #d9d8d9;
 }
